istio_sample/manifests-part2/authorizationpolicy.yaml
# Source: https://istio.io/latest/docs/ambient/getting-started/enforce-auth-policies/
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: productpage-ztunnel
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/bookinfo-gateway-istio
